--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,25 +2,54 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory: { memory: ~ }
+            # admin:
+            #             password: kitten
+            #             roles: 'ROLE_ADMIN'
+     
+        our_db_provider:
+            entity:
+                class: App\Entity\Users
+                property: email
+                  
+      
     encoders:
         App\Entity\Users: bcrypt
+        #Symfony\Component\Security\Core\User\User: plaintext
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
+           
+            provider: our_db_provider
+            
+            form_login: 
+                login_path: login
+                check_path: login
+                default_target_path: listUsers
+                always_use_default_target_path: true
+            logout: true
+         
+
 
             # activate different ways to authenticate
-
             # http_basic: true
+            
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
-            # form_login: true
+            
             # https://symfony.com/doc/current/security/form_login_setup.html
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/user, roles: ROLE_USER }
+        - { path: ^/author, roles: ROLE_AUTHOR }
+    role_hierarchy:
+        ROLE_ADMIN:       [ROLE_USER,ROLE_AUTHOR]
+        ROLE_AUTHOR:       [ROLE_USER]
+    
