--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,5 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+logout:
+   path: /logout
+  #  controller: App\Controller\UsersController::index
+
+    
